--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 tensorboard==1.14.0
 hydra-core==1.0.0rc1
+classy-v0.6-dev@git+git://github.com/facebookresearch/ClassyVision.git@master#egg=classy-v0.6-dev
