--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ var/
 .installed.cfg
 *.egg
 .hydra/
+tb_logs/
+metrics.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
