--- a/configs/config/pretrain/swav/swav_8node_resnet.yaml
+++ b/configs/config/pretrain/swav/swav_8node_resnet.yaml
@@ -70,6 +70,7 @@ config:
       num_iters: 3
       epsilon: 0.05
       crops_for_assign: [0, 1]
+      temp_hard_assignment_iters: 0
       queue:
         queue_length: 0
         start_iter: 0
