--- a/configs/config/pretrain/swav/swav_8node_resnet.yaml
+++ b/configs/config/pretrain/swav/swav_8node_resnet.yaml
@@ -71,6 +71,7 @@ config:
       epsilon: 0.05
       crops_for_assign: [0, 1]
       temp_hard_assignment_iters: 0
+      clipping_value: 0.
       queue:
         queue_length: 0
         start_iter: 0
