--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -385,6 +385,7 @@ config:
       crops_for_assign: [0, 1]
       num_prototypes: [3000]
       temp_hard_assignment_iters: 0
+      clipping_value: 0.
       queue:
         queue_length: 0
         start_iter: 0
