--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -258,6 +258,22 @@ config:
         # RegNet params
         # ------------------------------------------------------------- #
         REGNET: {}
+
+        # ------------------------------------------------------------- #
+        # Vision Transformer params. Default = ViT-L/16
+        # ------------------------------------------------------------- #
+        VISION_TRANSFORMERS:
+          IMAGE_SIZE: 224
+          PATCH_SIZE: 16
+          NUM_LAYERS: 24
+          NUM_HEADS: 16
+          HIDDEN_DIM: 1024
+          MLP_DIM: 4096
+          DROPOUT_RATE: 0.1
+          ATTENTION_DROPOUT_RATE: 0
+          CLASSIFIER: TOKEN
+
+
     # ----------------------------------------------------------------------------------- #
     # MODEL HEAD
     # ----------------------------------------------------------------------------------- #
