Copied truncated normal init from pytorch 1.7. Added path to imagenet

--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -271,7 +271,7 @@ config:
           MLP_DIM: 4096
           DROPOUT_RATE: 0.1
           ATTENTION_DROPOUT_RATE: 0
-          CLASSIFIER: TOKEN
+          CLASSIFIER: token
 
 
     # ----------------------------------------------------------------------------------- #
