--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -670,7 +670,11 @@ config:
     #      - if you use > 1 machine, set port yourself. RUN_ID="localhost:{port}".
     #      - If using 1 machine, set RUN_ID=auto and a free port will be automatically selected
     #   3. IF using INIT_METHOD=file, RUN_ID={file_path}
+    #   4. If using > 1 machine on the FAIR Cluster, set port yourself. RUN_ID={port}
     RUN_ID: "auto"
+    # If using > 1 node (machine) on FAIR Cluster, set to True to use
+    # slurm environment info to determine apportioned learnfair nodes and
+    SLURM_ENV: False
     # if True, does the gradient reduction in DDP
     MANUAL_GRADIENT_REDUCTION: False
 
