--- a/configs/config/pretrain/supervised/supervised_1gpu_vision_transformer_debug.yaml
+++ b/configs/config/pretrain/supervised/supervised_1gpu_vision_transformer_debug.yaml
@@ -60,7 +60,7 @@ config:
     cross_entropy_multiple_output_single_target:
       ignore_index: -1
   OPTIMIZER:
-    name: adam
+    name: adamw
     weight_decay: 0.3
 #    momentum: 0.9
     num_epochs: 90
@@ -77,13 +77,13 @@ config:
         schedulers:
           - name: linear
             start_value: 0.00001
-            end_value: 0.001
-          - name: linear
+            end_value: 0.003
+          - name: cosine
             start_value: 0.001
             end_value: 0.000001
         interval_scaling: [rescaled, fixed]
         update_interval: step
-        lengths: [0.1, 0.9]      # 100ep, 10% of training is used for warmup.
+        lengths: [0.1, 0.9]
   METERS:
     accuracy_list_meter:
       num_meters: 1
@@ -93,7 +93,7 @@ config:
   DISTRIBUTED:
     BACKEND: nccl
     NUM_NODES: 1
-    NUM_PROC_PER_NODE: 2 # 1 GPU
+    NUM_PROC_PER_NODE: 1 # 1 GPU
     RUN_ID: auto
   MACHINE:
     DEVICE: gpu
