--- a/configs/config/pretrain/supervised/supervised_32gpu_vision_transformer.yaml
+++ b/configs/config/pretrain/supervised/supervised_32gpu_vision_transformer.yaml
@@ -60,7 +60,7 @@ config:
     cross_entropy_multiple_output_single_target:
       ignore_index: -1
   OPTIMIZER:
-    name: adam
+    name: adamw
     weight_decay: 0.3
     #    momentum: 0.9
     num_epochs: 90
@@ -78,7 +78,7 @@ config:
           - name: linear
             start_value: 0.00001
             end_value: 0.001
-          - name: linear
+          - name: cosine
             start_value: 0.001
             end_value: 0.000001
         interval_scaling: [rescaled, fixed]
