--- a/configs/config/pretrain/supervised/supervised_8gpu_vision_transformer.yaml
+++ b/configs/config/pretrain/supervised/supervised_8gpu_vision_transformer.yaml
@@ -60,7 +60,7 @@ config:
     cross_entropy_multiple_output_single_target:
       ignore_index: -1
   OPTIMIZER:
-    name: adam
+    name: adamw
     weight_decay: 0.3
     #    momentum: 0.9
     num_epochs: 90
