--- a/configs/config/pretrain/supervised/supervised_8gpu_vision_transformer.yaml
+++ b/configs/config/pretrain/supervised/supervised_8gpu_vision_transformer.yaml
@@ -84,6 +84,8 @@ config:
         interval_scaling: [rescaled, fixed]
         update_interval: step
         lengths: [0.1, 0.9]                 # 100ep, 10% of training is used for warmup.
+  GRAD_CLIP:
+    USE_GRAD_CLIP: True
   METERS:
     accuracy_list_meter:
       num_meters: 1
