--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -397,6 +397,7 @@ config:
     # ----------------------------------------------------------------------------------- #
     swav_momentum_loss:
       momentum: 0.99
+      momentum_eval_mode: True
       embedding_dim: 128
       temperature: 0.1
       use_double_precision: False
