configs for vit16b

--- a/configs/config/pretrain/supervised/supervised_128gpu_vit_b16_imagenet.yaml
+++ b/configs/config/pretrain/supervised/supervised_128gpu_vit_b16_imagenet.yaml
@@ -8,7 +8,7 @@ config:
   CHECKPOINT:
     DIR: "/checkpoint/ito/vision_transformer/256gpu"
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 1
+    CHECKPOINT_FREQUENCY: 2
   DATA:
     NUM_DATALOADER_WORKERS: 5
     TRAIN:
@@ -48,11 +48,18 @@ config:
   MODEL:
     TRUNK:
       NAME: vision_transformer
-    #      TRUNK_PARAMS:
-    #        VISION_TRANSFORMERS:
+      TRUNK_PARAMS:
+        VISION_TRANSFORMERS:
+          NUM_LAYERS: 12
+          NUM_HEADS: 12
+          HIDDEN_DIM: 768
+          MLP_DIM: 3072
+          DROPOUT_RATE: 0.1
+          ATTENTION_DROPOUT_RATE: 0
+          CLASSIFIER: token
     HEAD:
       PARAMS: [
-      ["vision_transformer_head", {"in_plane": 1024, "hidden_dim": 4096,
+      ["vision_transformer_head", {"in_plane": 768, "hidden_dim": 3072,
                                    "num_classes": 1000}],
       ]
   LOSS:
