--- a/configs/config/pretrain/supervised/supervised_256gpu_vit_l16_imagenet.yaml
+++ b/configs/config/pretrain/supervised/supervised_256gpu_vit_l16_imagenet.yaml
@@ -2,13 +2,13 @@
 config:
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
-    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/8gpu_test"
+    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/256gpu"
     LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
-    DIR: "/checkpoint/ito/vision_transformer/8gpu_test"
+    DIR: "/checkpoint/ito/vision_transformer/256gpu"
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 1
+    CHECKPOINT_FREQUENCY: 2
   DATA:
     NUM_DATALOADER_WORKERS: 5
     TRAIN:
@@ -63,7 +63,7 @@ config:
     name: adamw
     weight_decay: 0.3
     #    momentum: 0.9
-    num_epochs: 90
+    num_epochs: 300
     #    nesterov: True
     #    regularize_bn: False
     #    regularize_bias: True
@@ -76,11 +76,11 @@ config:
         name: composite
         schedulers:
           - name: linear
-            start_value: 0.00001
+            start_value: 0
             end_value: 0.003
-          - name: linear
+          - name: cosine
             start_value: 0.003
-            end_value: 0.000001
+            end_value: 0
         interval_scaling: [rescaled, fixed]
         update_interval: step
         lengths: [0.1, 0.9]                 # 100ep, 10% of training is used for warmup.
@@ -94,9 +94,10 @@ config:
     TRAIN_STEP_NAME: standard_train_step
   DISTRIBUTED:
     BACKEND: nccl
-    NUM_NODES: 1
+    NUM_NODES: 32
     NUM_PROC_PER_NODE: 8 # 1 GPU
-    RUN_ID: auto
+    RUN_ID: "60215"
+    SLURM_ENV: True
   MACHINE:
     DEVICE: gpu
   VERBOSE: True
@@ -105,4 +106,4 @@ config:
   TEST_EVERY_NUM_EPOCH: 1
   TEST_MODEL: True
   SEED_VALUE: 0
-  MULTI_PROCESSING_METHOD: fork
+  MULTI_PROCESSING_METHOD: forkserver
