--- a/dev/packaging/vissl_conda/vissl/meta.yaml
+++ b/dev/packaging/vissl_conda/vissl/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: "{{ environ.get('BUILD_VERSION') }}"
 
 source:
- path: ../..
+ path: ../../../..
 
 requirements:
 
@@ -19,7 +19,7 @@ requirements:
 
 build:
   string: py{{py}}
-  script: BUILD_NIGHTLY=1 python setup.py install --single-version-externally-managed --record=record.txt # [not win]
+  script: python setup.py install --single-version-externally-managed --record=record.txt # [not win]
 
 about:
   home: https://github.com/facebookresearch/vissl
