Fixed configs as per circleci test failures

--- a/configs/config/pretrain/supervised/supervised_128gpu_vit_l16_imagenet.yaml
+++ b/configs/config/pretrain/supervised/supervised_128gpu_vit_l16_imagenet.yaml
@@ -48,6 +48,7 @@ config:
   MODEL:
     TRUNK:
       NAME: vision_transformer
+      TRUNK_PARAMS:
         VISION_TRANSFORMERS:
           name: vit_l_16
           DROPOUT_RATE: 0.1
