Updated package requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 tensorboard==1.15.0
 hydra-core@https://github.com/facebookresearch/hydra/tarball/8ac24
 classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/master
-faiss==1.5.3
+faiss
 cython
 scikit-learn
 parameterized==0.7.4
