--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 tensorboard==1.15.0
-hydra-core@https://github.com/facebookresearch/hydra/tarball/8ac24
-classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/master
+hydra-core>=1.0
+classy-vision==0.5.0
 faiss==1.5.3
 cython
 scikit-learn
