--- a/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_b32.yaml
+++ b/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_b32.yaml
@@ -1,41 +1,45 @@
 # @package _global_
 config:
+  VERBOSE: False
+  LOG_FREQUENCY: 10
+  TEST_ONLY: False
+  TEST_MODEL: True
+  SEED_VALUE: 0
+  MULTI_PROCESSING_METHOD: forkserver
+  MONITOR_PERF_STATS: True
+  ROLLING_BTIME_FREQ: 313
+  PERF_STAT_FREQUENCY: 10
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
-    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/1gpu_test"
+    EXPERIMENT_LOG_DIR:
     LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
-    DIR: "/checkpoint/ito/vision_transformer/1gpu_test"
+    DIR:
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 1
+    CHECKPOINT_FREQUENCY: 10
   DATA:
-    NUM_DATALOADER_WORKERS: 0
+    NUM_DATALOADER_WORKERS: 5
     TRAIN:
       DATA_SOURCES: [disk_folder]
-#      DATA_PATHS: ["<path to train folder>"]
+      #      DATA_PATHS: ["<path to train folder>"]
       LABEL_SOURCES: [disk_folder]
-      DATASET_NAMES: [imagenet1k_debug_folder]
-      BATCHSIZE_PER_REPLICA: 256
+      DATASET_NAMES: [imagenet1k_folder]
+      BATCHSIZE_PER_REPLICA: 4096
       TRANSFORMS:
         - name: RandomResizedCrop
           size: 224
-#        - name: RandomHorizontalFlip
-#        - name: ColorJitter
-#          brightness: 0.4
-#          contrast: 0.4
-#          saturation: 0.4
-#          hue: 0.4
+        - name: RandomHorizontalFlip
         - name: ToTensor
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
     TEST:
       DATA_SOURCES: [disk_folder]
-#      DATA_PATHS: ["<path to test folder>"]
+      DATA_PATHS: ["<path to test folder>"]
       LABEL_SOURCES: [disk_folder]
-      DATASET_NAMES: [imagenet1k_debug_folder]
-      BATCHSIZE_PER_REPLICA: 256
+      DATASET_NAMES: [imagenet1k_folder]
+      BATCHSIZE_PER_REPLICA: 4096
       TRANSFORMS:
         - name: Resize
           size: 256
@@ -46,6 +50,9 @@ config:
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
   MODEL:
+    FEATURE_EVAL_SETTINGS:
+      EVAL_MODE_ON: True
+      FREEZE_TRUNK_ONLY: True
     TRUNK:
       NAME: vision_transformer
       TRUNK_PARAMS:
@@ -56,40 +63,51 @@ config:
           CLASSIFIER: token
     HEAD:
       PARAMS: [
-      ["vision_transformer_head", {"in_plane": 768, "hidden_dim": 3072,
-                                   "num_classes": 1000}],
+      ["mlp", {"dims": [768, 1000]}],
       ]
+    WEIGHTS_INIT:
+      PARAMS_FILE: "specify the model weights"
+      STATE_DICT_KEY_NAME: classy_state_dict
+    SYNC_BN_CONFIG:
+      CONVERT_BN_TO_SYNC_BN: False
+      SYNC_BN_TYPE: apex
+      GROUP_SIZE: 8
+    AMP_PARAMS:
+      USE_AMP: True
+      # USE_AMP: True
+      AMP_ARGS: {"opt_level": "O1"}
   LOSS:
     name: cross_entropy_multiple_output_single_target
     cross_entropy_multiple_output_single_target:
       ignore_index: -1
   OPTIMIZER:
-    name: adamw
-    weight_decay: 0.3
-#    momentum: 0.9
-    num_epochs: 90
-#    nesterov: True
-#    regularize_bn: False
-#    regularize_bias: True
+    name: sgd
+    # In the OSS Caffe2 benchmark, RN50 models use 1e-4 and AlexNet models 5e-4
+    weight_decay: 0
+    momentum: 0.9
+    num_epochs: 100
+    nesterov: False
+#    regularize_bn: True
+    regularize_bias: True
     param_schedulers:
       lr:
-#        auto_lr_scaling: # learning rate is automatically scaled based on batch size
-#          auto_scale: true
-#          base_value: 0.1
-#          base_lr_batch_size: 256 # learning rate of 0.1 is used for batch size of 256
+        auto_lr_scaling:
+          auto_scale: true
+          base_value: 0.1
+          base_lr_batch_size: 256
         name: composite
         schedulers:
           - name: linear
-            start_value: 0.00001
-            end_value: 0.003
+            start_value: 0.0
+            end_value: 0.1
           - name: cosine
-            start_value: 0.001
-            end_value: 0.000001
-        interval_scaling: [rescaled, fixed]
+            start_value: 0.1
+            end_value: 0
+        interval_scaling: [rescaled, rescaled]
         update_interval: step
         lengths: [0.1, 0.9]
   GRAD_CLIP:
-    USE_GRAD_CLIP: True
+    USE_GRAD_CLIP: False
   METERS:
     accuracy_list_meter:
       num_meters: 1
@@ -99,14 +117,8 @@ config:
   DISTRIBUTED:
     BACKEND: nccl
     NUM_NODES: 1
-    NUM_PROC_PER_NODE: 1 # 1 GPU
+    NUM_PROC_PER_NODE: 8 # 1 GPU
     RUN_ID: auto
+    SLURM_ENV: True
   MACHINE:
     DEVICE: gpu
-  VERBOSE: True
-  LOG_FREQUENCY: 100
-  TEST_ONLY: False
-  TEST_EVERY_NUM_EPOCH: 1
-  TEST_MODEL: True
-  SEED_VALUE: 0
-  MULTI_PROCESSING_METHOD: fork
