--- a/configs/config/pretrain/moco/vit/vit_b32_1gpu_test.yaml
+++ b/configs/config/pretrain/moco/vit/vit_b32_1gpu_test.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 config:
-  VERBOSE: False
+  VERBOSE: True
   LOG_FREQUENCY: 10
   TEST_ONLY: False
   TEST_MODEL: False
@@ -9,23 +9,23 @@ config:
   MONITOR_PERF_STATS: True
   ROLLING_BTIME_FREQ: 313
   PERF_STAT_FREQUENCY: 10
-#  TEST_EVERY_NUM_EPOCH: 1
-#  TEST_MODEL: True
+  #  TEST_EVERY_NUM_EPOCH: 1
+  #  TEST_MODEL: True
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
-    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/simclr/1gpu_test"
+    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/moco/b32/test"
     LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
-    DIR: "/checkpoint/ito/vision_transformer/simclr/1gpu_test"
+    DIR: "/checkpoint/ito/vision_transformer/moco/b32/test"
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 1
+    CHECKPOINT_FREQUENCY: 10
   DATA:
     NUM_DATALOADER_WORKERS: 0
     TRAIN:
       DATA_SOURCES: [disk_folder]
-      DATASET_NAMES: [imagenet1k_folder]
-      BATCHSIZE_PER_REPLICA: 32
+      DATASET_NAMES: [imagenet1k_debug_folder]
+      BATCHSIZE_PER_REPLICA: 64
       LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
       TRANSFORMS:
         - name: ImgReplicatePil
@@ -44,26 +44,26 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
-      COLLATE_FUNCTION: simclr_collator
+      COLLATE_FUNCTION: moco_collator
       MMAP_MODE: True
       COPY_TO_LOCAL_DISK: False
       COPY_DESTINATION_DIR: /tmp/imagenet1k/
       DROP_LAST: True
-#    TEST:
-#      DATA_SOURCES: [disk_folder]
-#      #      DATA_PATHS: ["<path to test folder>"]
-#      LABEL_SOURCES: [disk_folder]
-#      DATASET_NAMES: [imagenet1k_folder]
-#      BATCHSIZE_PER_REPLICA: 256
-#      TRANSFORMS:
-#        - name: Resize
-#          size: 256
-#        - name: CenterCrop
-#          size: 224
-#        - name: ToTensor
-#        - name: Normalize
-#          mean: [0.485, 0.456, 0.406]
-#          std: [0.229, 0.224, 0.225]
+  #    TEST:
+  #      DATA_SOURCES: [disk_folder]
+  #      #      DATA_PATHS: ["<path to test folder>"]
+  #      LABEL_SOURCES: [disk_folder]
+  #      DATASET_NAMES: [imagenet1k_folder]
+  #      BATCHSIZE_PER_REPLICA: 256
+  #      TRANSFORMS:
+  #        - name: Resize
+  #          size: 256
+  #        - name: CenterCrop
+  #          size: 224
+  #        - name: ToTensor
+  #        - name: Normalize
+  #          mean: [0.485, 0.456, 0.406]
+  #          std: [0.229, 0.224, 0.225]
   MODEL:
     TRUNK:
       NAME: vision_transformer
@@ -75,30 +75,42 @@ config:
           CLASSIFIER: token
     HEAD:
       PARAMS: [
-        ["mlp", {"dims": [768, 3072], "use_relu": True, "use_bn": True, "use_bias": False}],
-        ["mlp", {"dims": [3072, 3072], "use_relu": True, "use_bn": True, "use_bias": False}],
-        ["mlp", {"dims": [3072, 128]}],
+      ["mlp", {"dims": [768, 2048], "use_relu": True}],
+      ["mlp", {"dims": [2048, 128]}],
       ]
+    SYNC_BN_CONFIG:
+      CONVERT_BN_TO_SYNC_BN: False
+      SYNC_BN_TYPE: apex
+      GROUP_SIZE: 8
+    AMP_PARAMS:
+      USE_AMP: True
+      # USE_AMP: True
+      AMP_ARGS: {"opt_level": "O1"}
   LOSS:
-    name: simclr_info_nce_loss
-    simclr_info_nce_loss:
-      temperature: 0.1
-      buffer_params:
-        embedding_dim: 128
+    name: moco_loss
+    moco_loss:
+      embedding_dim: 128
+      queue_size: 65536
+      momentum: 0.999
+      temperature: 0.2
   OPTIMIZER:
     name: adamw
     weight_decay: 0.3
     #    momentum: 0.9
-    num_epochs: 90
+    num_epochs: 300
     #    nesterov: True
     #    regularize_bn: False
     #    regularize_bias: True
     param_schedulers:
       lr:
-#        auto_lr_scaling: # learning rate is automatically scaled based on batch size
-#          auto_scale: true
-#          base_value: 0.1
-#          base_lr_batch_size: 256 # learning rate of 0.1 is used for batch size of 256
+        auto_lr_scaling:
+          auto_scale: True
+          base_value: 0.003
+          base_lr_batch_size: 256
+        #        auto_lr_scaling: # learning rate is automatically scaled based on batch size
+        #          auto_scale: true
+        #          base_value: 0.1
+        #          base_lr_batch_size: 256 # learning rate of 0.1 is used for batch size of 256
         name: composite
         schedulers:
           - name: linear
@@ -107,7 +119,7 @@ config:
           - name: cosine
             start_value: 0.003
             end_value: 0
-        interval_scaling: [rescaled, fixed]
+        interval_scaling: [rescaled, rescaled]
         update_interval: step
         lengths: [0.1, 0.9]
   GRAD_CLIP:
@@ -123,5 +135,6 @@ config:
     NUM_NODES: 1
     NUM_PROC_PER_NODE: 1 # 1 GPU
     RUN_ID: auto
+    SLURM_ENV: False
   MACHINE:
     DEVICE: gpu
