--- a/configs/config/pretrain/moco/vit/vit_l16.yaml
+++ b/configs/config/pretrain/moco/vit/vit_l16.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 config:
-  VERBOSE: False
+  VERBOSE: True
   LOG_FREQUENCY: 10
   TEST_ONLY: False
   TEST_MODEL: False
@@ -13,19 +13,19 @@ config:
   #  TEST_MODEL: True
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
-    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/simclr/b16_64gpu"
+    EXPERIMENT_LOG_DIR:
     LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
-    DIR: "/checkpoint/ito/vision_transformer/simclr/b16_64gpu"
+    DIR:
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 1
+    CHECKPOINT_FREQUENCY: 10
   DATA:
-    NUM_DATALOADER_WORKERS: 6
+    NUM_DATALOADER_WORKERS: 5
     TRAIN:
       DATA_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
-      BATCHSIZE_PER_REPLICA: 64
+      BATCHSIZE_PER_REPLICA: 32
       LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
       TRANSFORMS:
         - name: ImgReplicatePil
@@ -44,7 +44,7 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
-      COLLATE_FUNCTION: simclr_collator
+      COLLATE_FUNCTION: moco_collator
       MMAP_MODE: True
       COPY_TO_LOCAL_DISK: False
       COPY_DESTINATION_DIR: /tmp/imagenet1k/
@@ -69,26 +69,30 @@ config:
       NAME: vision_transformer
       TRUNK_PARAMS:
         VISION_TRANSFORMERS:
-          name: vit_b_16
+          name: vit_l_16
           DROPOUT_RATE: 0.1
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
     HEAD:
       PARAMS: [
-      ["mlp", {"dims": [768, 3072], "use_relu": True, "use_bn": True, "use_bias": False}],
-      ["mlp", {"dims": [3072, 3072], "use_relu": True, "use_bn": True, "use_bias": False}],
-      ["mlp", {"dims": [3072, 128]}],
+      ["mlp", {"dims": [1024, 2048], "use_relu": True}],
+      ["mlp", {"dims": [2048, 128]}],
       ]
     SYNC_BN_CONFIG:
-      CONVERT_BN_TO_SYNC_BN: True
+      CONVERT_BN_TO_SYNC_BN: False
       SYNC_BN_TYPE: apex
       GROUP_SIZE: 8
+    AMP_PARAMS:
+      USE_AMP: True
+      # USE_AMP: True
+      AMP_ARGS: {"opt_level": "O1"}
   LOSS:
-    name: simclr_info_nce_loss
-    simclr_info_nce_loss:
-      temperature: 0.1
-      buffer_params:
-        embedding_dim: 128
+    name: moco_loss
+    moco_loss:
+      embedding_dim: 128
+      queue_size: 65536
+      momentum: 0.999
+      temperature: 0.2
   OPTIMIZER:
     name: adamw
     weight_decay: 0.3
@@ -99,6 +103,10 @@ config:
     #    regularize_bias: True
     param_schedulers:
       lr:
+        auto_lr_scaling:
+          auto_scale: True
+          base_value: 0.003
+          base_lr_batch_size: 4096
         #        auto_lr_scaling: # learning rate is automatically scaled based on batch size
         #          auto_scale: true
         #          base_value: 0.1
@@ -111,7 +119,7 @@ config:
           - name: cosine
             start_value: 0.003
             end_value: 0
-        interval_scaling: [rescaled, fixed]
+        interval_scaling: [rescaled, rescaled]
         update_interval: step
         lengths: [0.1, 0.9]
   GRAD_CLIP:
@@ -124,7 +132,7 @@ config:
     TRAIN_STEP_NAME: standard_train_step
   DISTRIBUTED:
     BACKEND: nccl
-    NUM_NODES: 8
+    NUM_NODES: 4
     NUM_PROC_PER_NODE: 8 # 1 GPU
     RUN_ID: "60215"
     SLURM_ENV: True
