--- a/configs/config/pretrain/simclr/models/vit_l32.yaml
+++ b/configs/config/pretrain/simclr/models/vit_l32.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 config:
-  VERBOSE: False
+  VERBOSE: True
   LOG_FREQUENCY: 10
   TEST_ONLY: False
   TEST_MODEL: False
@@ -13,19 +13,19 @@ config:
   #  TEST_MODEL: True
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
-    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/simclr/2gpu_test"
+    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/simclr/l32"
     LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
-    DIR: "/checkpoint/ito/vision_transformer/simclr/2gpu_test"
+    DIR: "/checkpoint/ito/vision_transformer/simclr/l32"
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 1
+    CHECKPOINT_FREQUENCY: 10
   DATA:
-    NUM_DATALOADER_WORKERS: 6
+    NUM_DATALOADER_WORKERS: 5
     TRAIN:
       DATA_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
-      BATCHSIZE_PER_REPLICA: 128
+      BATCHSIZE_PER_REPLICA: 96
       LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
       TRANSFORMS:
         - name: ImgReplicatePil
@@ -69,20 +69,23 @@ config:
       NAME: vision_transformer
       TRUNK_PARAMS:
         VISION_TRANSFORMERS:
-          name: vit_b_32
+          name: vit_l_32
           DROPOUT_RATE: 0.1
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
     HEAD:
       PARAMS: [
-      ["mlp", {"dims": [768, 3072], "use_relu": True, "use_bn": True, "use_bias": False}],
-      ["mlp", {"dims": [3072, 3072], "use_relu": True, "use_bn": True, "use_bias": False}],
-      ["mlp", {"dims": [3072, 128]}],
+      ["mlp", {"dims": [1024, 4096], "use_relu": True}],
+      ["mlp", {"dims": [4096, 128]}],
       ]
     SYNC_BN_CONFIG:
-      CONVERT_BN_TO_SYNC_BN: True
+      CONVERT_BN_TO_SYNC_BN: False
       SYNC_BN_TYPE: apex
       GROUP_SIZE: 8
+    AMP_PARAMS:
+      USE_AMP: True
+      # USE_AMP: True
+      AMP_ARGS: {"opt_level": "O1"}
   LOSS:
     name: simclr_info_nce_loss
     simclr_info_nce_loss:
@@ -99,6 +102,10 @@ config:
     #    regularize_bias: True
     param_schedulers:
       lr:
+        auto_lr_scaling:
+          auto_scale: True
+          base_value: 0.003
+          base_lr_batch_size: 4096
         #        auto_lr_scaling: # learning rate is automatically scaled based on batch size
         #          auto_scale: true
         #          base_value: 0.1
@@ -111,7 +118,7 @@ config:
           - name: cosine
             start_value: 0.003
             end_value: 0
-        interval_scaling: [rescaled, fixed]
+        interval_scaling: [rescaled, rescaled]
         update_interval: step
         lengths: [0.1, 0.9]
   GRAD_CLIP:
@@ -124,7 +131,7 @@ config:
     TRAIN_STEP_NAME: standard_train_step
   DISTRIBUTED:
     BACKEND: nccl
-    NUM_NODES: 2
+    NUM_NODES: 4
     NUM_PROC_PER_NODE: 8 # 1 GPU
     RUN_ID: "60215"
     SLURM_ENV: True
