--- a/configs/config/pretrain/supervised/supervised_vit_hugo.yaml
+++ b/configs/config/pretrain/supervised/supervised_vit_hugo.yaml
@@ -1,35 +1,33 @@
 # @package _global_
+# Params from Hugo and Herve's ViT experiments
 config:
-  VERBOSE: False
+  VERBOSE: True
   LOG_FREQUENCY: 10
   TEST_ONLY: False
-  TEST_MODEL: False
+  TEST_MODEL: True
+  TEST_EVERY_NUM_EPOCH: 1
   SEED_VALUE: 0
   MULTI_PROCESSING_METHOD: forkserver
   MONITOR_PERF_STATS: True
   ROLLING_BTIME_FREQ: 313
   PERF_STAT_FREQUENCY: 10
-  #  TEST_EVERY_NUM_EPOCH: 1
-  #  TEST_MODEL: True
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
-    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/simclr/l16_64gpu"
+    EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/simclr/b32_32gpu"
     LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
-    DIR: "/checkpoint/ito/vision_transformer/simclr/l16_64gpu"
+    DIR: "/checkpoint/ito/vision_transformer/simclr/b32_32gpu"
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 1
+    CHECKPOINT_FREQUENCY: 4
   DATA:
-    NUM_DATALOADER_WORKERS: 6
+    NUM_DATALOADER_WORKERS: 5
     TRAIN:
       DATA_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
-      BATCHSIZE_PER_REPLICA: 64
-      LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
+      LABEL_SOURCES: [disk_folder]
+      BATCHSIZE_PER_REPLICA: 128
       TRANSFORMS:
-        - name: ImgReplicatePil
-          num_times: 2
         - name: RandomResizedCrop
           size: 224
         - name: RandomHorizontalFlip
@@ -44,54 +42,50 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
-      COLLATE_FUNCTION: simclr_collator
-      MMAP_MODE: True
-      COPY_TO_LOCAL_DISK: False
-      COPY_DESTINATION_DIR: /tmp/imagenet1k/
-      DROP_LAST: True
-  #    TEST:
-  #      DATA_SOURCES: [disk_folder]
-  #      #      DATA_PATHS: ["<path to test folder>"]
-  #      LABEL_SOURCES: [disk_folder]
-  #      DATASET_NAMES: [imagenet1k_folder]
-  #      BATCHSIZE_PER_REPLICA: 256
-  #      TRANSFORMS:
-  #        - name: Resize
-  #          size: 256
-  #        - name: CenterCrop
-  #          size: 224
-  #        - name: ToTensor
-  #        - name: Normalize
-  #          mean: [0.485, 0.456, 0.406]
-  #          std: [0.229, 0.224, 0.225]
+    TEST:
+      DATA_SOURCES: [disk_folder]
+      #      DATA_PATHS: ["<path to test folder>"]
+      LABEL_SOURCES: [disk_folder]
+      DATASET_NAMES: [imagenet1k_folder]
+      BATCHSIZE_PER_REPLICA: 128
+      TRANSFORMS:
+        - name: Resize
+          size: 256
+        - name: CenterCrop
+          size: 224
+        - name: ToTensor
+        - name: Normalize
+          mean: [0.485, 0.456, 0.406]
+          std: [0.229, 0.224, 0.225]
   MODEL:
     TRUNK:
       NAME: vision_transformer
       TRUNK_PARAMS:
         VISION_TRANSFORMERS:
-          name: vit_l_16
+          name: vit_b_16
           DROPOUT_RATE: 0.1
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
-    HEAD:
-      PARAMS: [
-      ["mlp", {"dims": [1024, 4096], "use_relu": True, "use_bn": True, "use_bias": False}],
-      ["mlp", {"dims": [4096, 4096], "use_relu": True, "use_bn": True, "use_bias": False}],
-      ["mlp", {"dims": [4096, 128]}],
-      ]
+#    HEAD:
+#      PARAMS: [
+#      ["vision_transformer_head", {"in_plane": 768, "hidden_dim": 3072,
+#                                   "num_classes": 1000}],
+#      ]
     SYNC_BN_CONFIG:
-      CONVERT_BN_TO_SYNC_BN: True
+      CONVERT_BN_TO_SYNC_BN: False
       SYNC_BN_TYPE: apex
       GROUP_SIZE: 8
+    AMP_PARAMS:
+      USE_AMP: True
+      # USE_AMP: True
+      AMP_ARGS: {"opt_level": "O1"}
   LOSS:
-    name: simclr_info_nce_loss
-    simclr_info_nce_loss:
-      temperature: 0.1
-      buffer_params:
-        embedding_dim: 128
+    name: cross_entropy_multiple_output_single_target
+    cross_entropy_multiple_output_single_target:
+      ignore_index: -1
   OPTIMIZER:
     name: adamw
-    weight_decay: 0.3
+    weight_decay: 0.05
     #    momentum: 0.9
     num_epochs: 300
     #    nesterov: True
@@ -99,6 +93,10 @@ config:
     #    regularize_bias: True
     param_schedulers:
       lr:
+        auto_lr_scaling:
+          auto_scale: True
+          base_value: 0.0005
+          base_lr_batch_size: 512
         #        auto_lr_scaling: # learning rate is automatically scaled based on batch size
         #          auto_scale: true
         #          base_value: 0.1
@@ -111,9 +109,9 @@ config:
           - name: cosine
             start_value: 0.003
             end_value: 0
-        interval_scaling: [rescaled, fixed]
+        interval_scaling: [rescaled, rescaled]
         update_interval: step
-        lengths: [0.1, 0.9]
+        lengths: [0.016, 0.984]
   GRAD_CLIP:
     USE_GRAD_CLIP: True
   METERS: null
