--- a/configs/config/pretrain/simclr/models/vit_l32.yaml
+++ b/configs/config/pretrain/simclr/models/vit_l32.yaml
@@ -69,7 +69,12 @@ config:
       NAME: vision_transformer
       TRUNK_PARAMS:
         VISION_TRANSFORMERS:
-          name: vit_l_32
+          IMAGE_SIZE: 224
+          PATCH_SIZE: 32
+          NUM_LAYERS: 24
+          NUM_HEADS: 16
+          HIDDEN_DIM: 1024
+          MLP_DIM: 4096
           DROPOUT_RATE: 0.1
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
