--- a/configs/config/pretrain/clusterfit/clusterfit_resnet_8gpu_imagenet.yaml
+++ b/configs/config/pretrain/clusterfit/clusterfit_resnet_8gpu_imagenet.yaml
@@ -31,6 +31,7 @@ config:
       COPY_TO_LOCAL_DISK: False
       COPY_DESTINATION_DIR: /tmp/imagenet1k_clusters_rotnetin1k/
   METERS:
+    name: accuracy_list_meter
     accuracy_list_meter:
       num_meters: 1
       topk_values: [1]
