--- a/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_b32.yaml
+++ b/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_b32.yaml
@@ -12,7 +12,6 @@ config:
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
     EXPERIMENT_LOG_DIR:
-    LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
     DIR:
@@ -109,6 +108,7 @@ config:
   GRAD_CLIP:
     USE_GRAD_CLIP: False
   METERS:
+    name: accuracy_list_meter
     accuracy_list_meter:
       num_meters: 1
       topk_values: [1, 5]
