--- a/configs/config/pretrain/simclr/simclr_vit_h14_128gpu.yaml
+++ b/configs/config/pretrain/simclr/simclr_vit_h14_128gpu.yaml
@@ -14,7 +14,6 @@ config:
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
     EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/simclr/l16_64gpu"
-    LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
     DIR: "/checkpoint/ito/vision_transformer/simclr/l16_64gpu"
@@ -120,7 +119,8 @@ config:
         lengths: [0.1, 0.9]
   GRAD_CLIP:
     USE_GRAD_CLIP: True
-  METERS: null
+  METERS:
+    name: ""
   #    accuracy_list_meter:
   #      num_meters: 1
   #      topk_values: [1, 5]
