--- a/configs/config/pretrain/supervised/supervised_vit_hugo.yaml
+++ b/configs/config/pretrain/supervised/supervised_vit_hugo.yaml
@@ -14,7 +14,6 @@ config:
   TENSORBOARD_SETUP:
     USE_TENSORBOARD: True
     EXPERIMENT_LOG_DIR: "/checkpoint/ito/vision_transformer/simclr/b32_32gpu"
-    LOG_ACTIVATIONS: False
     FLUSH_EVERY_N_MIN: 20
   CHECKPOINT:
     DIR: "/checkpoint/ito/vision_transformer/simclr/b32_32gpu"
@@ -114,7 +113,8 @@ config:
         lengths: [0.016, 0.984]
   GRAD_CLIP:
     USE_GRAD_CLIP: True
-  METERS: null
+  METERS:
+    name: ""
   #    accuracy_list_meter:
   #      num_meters: 1
   #      topk_values: [1, 5]
