--- a/configs/config/pretrain/moco/moco_2node_resnet.yaml
+++ b/configs/config/pretrain/moco/moco_2node_resnet.yaml
@@ -43,7 +43,8 @@ config:
       DROP_LAST: True
   TRAINER:
     TRAIN_STEP_NAME: standard_train_step
-  METERS: null
+  METERS:
+    name: ""
   MODEL:
     TRUNK:
       NAME: resnet
