--- a/configs/config/pretrain/moco/vit/vit_b32.yaml
+++ b/configs/config/pretrain/moco/vit/vit_b32.yaml
@@ -128,7 +128,8 @@ config:
         lengths: [0.1, 0.9]
   GRAD_CLIP:
     USE_GRAD_CLIP: True
-  METERS: null
+  METERS:
+    name: ""
   #    accuracy_list_meter:
   #      num_meters: 1
   #      topk_values: [1, 5]
@@ -136,7 +137,7 @@ config:
     TRAIN_STEP_NAME: standard_train_step
   DISTRIBUTED:
     BACKEND: nccl
-    NUM_NODES:
+    NUM_NODES: 4
     NUM_PROC_PER_NODE: 8 # 1 GPU
     RUN_ID: "60215"
     SLURM_ENV: True
