--- a/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_l16.yaml
+++ b/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_l16.yaml
@@ -56,7 +56,12 @@ config:
       NAME: vision_transformer
       TRUNK_PARAMS:
         VISION_TRANSFORMERS:
-          name: vit_l_16
+          IMAGE_SIZE: 224
+          PATCH_SIZE: 16
+          NUM_LAYERS: 24
+          NUM_HEADS: 16
+          HIDDEN_DIM: 1024
+          MLP_DIM: 4096
           DROPOUT_RATE: 0.1
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
