--- a/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_b16.yaml
+++ b/configs/config/benchmark/linear_image_classification/imagenet1k/models/vit_b16.yaml
@@ -22,7 +22,7 @@ config:
     TRAIN:
       DATA_SOURCES: [disk_folder]
       #      DATA_PATHS: ["<path to train folder>"]
-#      LABEL_SOURCES: [disk_folder]
+      LABEL_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
       BATCHSIZE_PER_REPLICA: 2048
       TRANSFORMS:
@@ -35,8 +35,8 @@ config:
           std: [0.229, 0.224, 0.225]
     TEST:
       DATA_SOURCES: [disk_folder]
-      DATA_PATHS: ["<path to test folder>"]
-#      LABEL_SOURCES: [disk_folder]
+#      DATA_PATHS: ["<path to test folder>"]
+      LABEL_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
       BATCHSIZE_PER_REPLICA: 2048
       TRANSFORMS:
