Added [hacky] functionality for interpolating position embedding for fine-tuning

--- a/configs/config/pretrain/moco/vit/vit_hybrid_resnet50_b16.yaml
+++ b/configs/config/pretrain/moco/vit/vit_hybrid_resnet50_b16.yaml
@@ -24,7 +24,7 @@ config:
     TRAIN:
       DATA_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
-      BATCHSIZE_PER_REPLICA: 128
+      BATCHSIZE_PER_REPLICA: 64
       LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
       TRANSFORMS:
         - name: ImgReplicatePil
@@ -74,9 +74,10 @@ config:
           NUM_HEADS: 12
           HIDDEN_DIM: 768
           MLP_DIM: 3072
-          DROPOUT_RATE: 0
+          DROPOUT_RATE: 0.1
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
+          HYBRID: resnet50
     HEAD:
       PARAMS: [
       ["mlp", {"dims": [768, 2048], "use_relu": True}],
