--- a/configs/config/pretrain/moco/vit/vit_hybrid_resnet18_b16.yaml
+++ b/configs/config/pretrain/moco/vit/vit_hybrid_resnet18_b16.yaml
@@ -24,7 +24,7 @@ config:
     TRAIN:
       DATA_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
-      BATCHSIZE_PER_REPLICA: 128
+      BATCHSIZE_PER_REPLICA: 64
       LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
       TRANSFORMS:
         - name: ImgReplicatePil
@@ -77,6 +77,7 @@ config:
           DROPOUT_RATE: 0
           ATTENTION_DROPOUT_RATE: 0
           CLASSIFIER: token
+          HYBRID: resnet18
     HEAD:
       PARAMS: [
       ["mlp", {"dims": [768, 2048], "use_relu": True}],
